--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,43 +14,11 @@
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp" />
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp" />
+
+    <include layout="@layout/navbar"/>
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#003366"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent">
-
-        <TextView
-            android:id="@+id/store"
-            style="@style/buttons"
-            android:text="Store" />
-
-        <View style="@style/border" />
-
-        <TextView
-            android:id="@+id/browse"
-            style="@style/buttons"
-            android:text="Browse" />
-
-        <View style="@style/border" />
-
-        <TextView
-            android:id="@+id/library"
-            style="@style/buttons"
-            android:text="Library" />
-
-        <View style="@style/border" />
-
-        <TextView
-            android:id="@+id/radio"
-            style="@style/buttons"
-            android:text="Radio" />
-    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
