--- a/app/src/main/res/layout/radio.xml
+++ b/app/src/main/res/layout/radio.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -9,4 +9,6 @@
         android:layout_height="wrap_content"
         android:text="browse radio stations" />
 
-</RelativeLayout>
+    <include layout="@layout/navbar"/>
+
+</android.support.constraint.ConstraintLayout>
