--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,17 +8,15 @@
 
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Home Page"
+        android:layout_width="378dp"
+        android:layout_height="36dp"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
-        android:layout_marginStart="8dp" />
+        android:text="Home Page \nview trending music, trending artists, and top songs of the week/month "
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <include layout="@layout/navbar"/>
-
+    <include layout="@layout/navbar" />
 
 
 </android.support.constraint.ConstraintLayout>
