--- a/app/src/main/res/layout/payments.xml
+++ b/app/src/main/res/layout/payments.xml
@@ -1,17 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
-        android:layout_width="match_parent"
+        android:id="@+id/textView"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="view songs for purchase using paypal API intergrated into the build.gradle(module app) "/>
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Store \nview songs for purchase using paypal API intergrated into the build.gradle(module app) "
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
+        android:id="@+id/purchase"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
         android:text="Test Purchase"
-        android:id="@+id/purchase"/>
-    <include layout="@layout/navbar"/>
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <include layout="@layout/navbar" />
 
 </android.support.constraint.ConstraintLayout>
